<resources>
    <string name="app_name">TFGDrone3</string>
    <string name="dji_sdk_app_key">0a904d76eada141e59029cbb</string>

    <!-- Main Activity Strings-->
    <string name="sdkVersion_label">SDK Version: </string>
    <string name="noConectado">No conectado</string>
    <string name="crearRuta">Crear Ruta</string>
    <string name="cargarRuta">Cargar Ruta</string>
    <string name="ajustes">Ajustes</string>
    <string name="conectarDrone">Conectar a dispositivo</string>
    <string name="noDispositivo">No hay dispositivo</string>
    <string name="title_activity_crear_ruta">Map</string>
    <string name="title_activity_cargar_ruta">CargarRuta</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Route Report-->
    <string name="targetCountLabel">Cantidad de Objetivos</string>
    <string name="routePointCountLabel">Cantidad de puntos de ruta</string>
    <string name="minSpeedLabel">Velocidad mínima: </string>
    <string name="maxSpeedLabel">Velocidad máxima</string>
    <string name="minHeightLabel">Altura mínima</string>
    <string name="maxHeightLabel">Altura máxima</string>
    <string name="routeAdjustedWarning">Ruta ajustada a las especificaciones en ajustes</string>

    <!-- Strings related to Settings -->
    <string name="route_settings">Ajustes de ruta</string>
    <string name="end_route_acction">Accion tras acabar la ruta</string>
    <string-array name="end_route_acction_options">
        <item>Controlar manualmente</item>
        <item>Volver a Home</item>
        <item>Aterrizar</item>
        <item>Volver al primer punto</item>
    </string-array>
    <string-array name="end_route_acction_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="min_height_setting">Altura mínima</string>
    <string name="max_height_setting">Altura máxima</string>
    <string name="max_distance_setting">Distancia máxima</string>

    <string name="drone_settings">Ajustes del drone</string>
    <string name="emergency_setting">Ajuste en caso de emergencia</string>
    <string-array name="emergency_setting_options">
        <item>Volver a Home</item>
        <item>Aterrizar inmediatamente</item>
    </string-array>
    <string-array name="emergency_setting_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="max_speed_setting">Velocidad máxima</string>

    <string name="gimball_settings">Ajustes del gimball</string>
    <string name="yaw_range_setting">Amplitud de giro en grados</string>
    <string name="yaw_speed_setting">Velocidad máxima de giro (Yaw)</string>
    <string name="pitch_speed_setting">Velocidad máxima de giro (pitch)</string>

    <array name="drone_information">
        <item>Nombre</item>
        <item>Modelo</item>
        <item>Firmware</item>
        <item>Estado de conexión</item>
    </array>
    <array name="connection_modes">
        <item>Conexión USB</item>
        <item>Conexión via Bridge App</item>
        <item>No conectado</item>
    </array>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Crear rutas-->
    <string name="ya_grabando">Grabacion ya en curso</string>
    <string name="addCR">Añadir</string>
    <string name="calcularCR">Calcular ruta</string>
    <string name="saveCR">Guardar</string>
    <string name="addHome">Localización Home</string>
    <string name="addAcimutal">Técnica Acimutal</string>
    <string name="addCrane">Técnica Picado</string>
    <string name="addOrbit">Técnica Orbital</string>
    <string name="addItemtoMapTitle">Añadir objeto al mapa</string>
    <string name="finalizar">Finalizar</string>
    <string name="initRuta">Iniciar ruta</string>
    <string name="objectiveHeightLabel">Altura de target en metros (Rel. Altura Despegue)</string>
    <string name="tiempoPrevio">Tiempo previo: </string>
    <string name="tiempoTardado">Tiempo desde el punto anterior al actual</string>
    <string name="accion">Acción</string>
    <string name="addTarget">Añadir Objetivo</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string-array name="accionesNoGrabando">
        <item>Nada</item>
        <item>Inicia Grabacion</item>
        <item>Grabar durante este punto</item>
        <item>Tomar foto</item>
    </string-array>
    <string-array name="accionesGrabando">
        <item>Continuar Grabando</item>
        <item>Detener Grabacion</item>
        <item>Detener Grabacion y tomar foto</item>
    </string-array>
    <string name="latitudLabel">Latitud: </string>
    <string name="longitudLabel">Longitud: </string>
    <string name="tiempoLabel">Tiempo: </string>
    <string name="accionLabel">Accion: </string>
    <string name="alturaLabel">Altura: </string>
    <!-- Tecnica Acimutal-->
    <string name="sigueRutaTrue">Orientacion según ruta</string>
    <string name="sigueRutaFalse">Orientación personalizada</string>
    <string name="alturaSobreObjetivoLabel">Altura en metros sobre el target</string>
    <string name="orientacionNESOLabel">0º Norte, 90º este, 180º sur, 270º oeste</string>
    <string name="orientacionLabel">Orientación</string>
    <string name="orientacionHint">Entre 0 y 360</string>
    <string name="pitch">Pitch</string>
    <string name="yaw">Yaw</string>
    <string name="roll">Roll</string>
    <string name="horizontalSpeed">Velocidad horizontal</string>
    <string name="verticalSpeed">Velocidad vertical</string>
    <string name="speedBearing">Direccion speed</string>
    <string name="totalSpeed">Velocidad total</string>
    <string name="cameraBearing">Orientacion Camara</string>
    <string name="speed">Velocidad</string>

    <!-- Iniciar Vuelo-->
    <string name="status">Estado</string>
    <string name="showFPV">Mostrar FPV</string>
    <string name="showMap">Mostrar mapa</string>
    <string name="startRoute">Iniciar ruta</string>
    <string name="pauseRoute">Pausar ruta</string>
    <string name="controlCamera">Camara manual</string>
    <string name="automatedCamera">Camara automática</string>
</resources>
