<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/route_settings"
        android:key="route_settings_key">
        <ListPreference
            android:title="@string/end_route_acction"
            android:defaultValue="0"
            android:key="end_route_action_key"
            android:entries="@array/end_route_acction_options"
            android:entryValues="@array/end_route_acction_values"
            android:persistent="true"/>
        <EditTextPreference
            android:title="@string/min_height_setting"
            android:key="min_height_setting_key"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:selectAllOnFocus="true"
            android:defaultValue="20"/>
        <EditTextPreference
            android:title="@string/max_height_setting"
            android:key="max_height_setting_key"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:selectAllOnFocus="true"
            android:defaultValue="100"/>
        <EditTextPreference
            android:title="@string/max_distance_setting"
            android:key="max_distance_setting_key"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:selectAllOnFocus="true"
            android:defaultValue="2500"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/drone_settings"
        android:key="drone_settings_key">
        <ListPreference
            android:title="@string/emergency_setting"
            android:defaultValue="0"
            android:key="emergency_setting_key"
            android:entries="@array/emergency_setting_options"
            android:entryValues="@array/emergency_setting_values"
            android:persistent="true"/>
        <EditTextPreference
            android:title="@string/max_speed_setting"
            android:key="max_speed_setting_key"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:selectAllOnFocus="true"
            android:defaultValue="10"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gimball_settings"
        android:key="gimball_settings_key">
        <EditTextPreference
            android:title="@string/yaw_range_setting"
            android:key="yaw_range_setting_key"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:selectAllOnFocus="true"
            android:defaultValue="180"/>
        <EditTextPreference
            android:title="@string/yaw_speed_setting"
            android:key="yaw_speed_setting_key"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:selectAllOnFocus="true"
            android:defaultValue="90"/>
        <EditTextPreference
            android:title="@string/pitch_speed_setting"
            android:key="pitch_speed_setting_key"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:selectAllOnFocus="true"
            android:defaultValue="90"/>
    </PreferenceCategory>

</PreferenceScreen>