<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsAcimutal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alturaSobreObjetivoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alturaSobreObjetivoLabel"
        tools:text="@string/alturaSobreObjetivoLabel" />

    <EditText
        android:id="@+id/alturaSobreObjetivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"/>

    <TextView
        android:id="@+id/Orientacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orientacionLabel" />

    <ToggleButton
        android:id="@+id/toggleSigueRuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textOff="@string/sigueRutaFalse"
        android:textOn="@string/sigueRutaTrue" />

    <TextView
        android:id="@+id/orientacionNESOLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orientacionNESOLabel"
        tools:text="@string/orientacionNESOLabel" />

    <EditText
        android:id="@+id/orientacionNESO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/orientacionHint"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"/>

</LinearLayout>