<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/targetCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/targetCountLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/routePointCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routePointCountLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/minSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minSpeedLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/maxSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxSpeedLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/minHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minHeightLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/maxHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxHeightLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/routeAdjustedWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/routeAdjustedWarning"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/targetCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:text="TextView" />

    <TextView
        android:id="@+id/routePointCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/minSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/maxSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/minHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/maxHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />
</GridLayout>