<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.p32gocamuco.tfgdrone3.CrearRuta">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:context="es.p32gocamuco.tfgdrone3.CrearRuta"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintLeft_toLeftOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        map:layout_constraintBottom_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/saveCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saveCR"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calcRutaCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calcularCR"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/initRuta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initRuta"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/addCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addCR"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/finalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finalizar"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
