<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/setHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objectiveHeightLabel" />

    <EditText
        android:id="@+id/objectiveHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tiempoTardadoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tiempoTardado" />

    <EditText
        android:id="@+id/tiempoTardado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/accionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion" />

    <Spinner
        android:id="@+id/accion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>